<resources>
    <!-- Main Activity -->
    <string name="app_name">HandyApp</string>
    <string name="action_main_help">Help</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="toast_about">Application version 1.0 \n Developers: \n
        Lena Kazantseva, \n Tara Davoodnia, \n Ruth Anne Sebastian , \n Maxim Kasyanenko
    </string>
    <string name="main_help">My Handy App contains 4 mini apps.\n 1.New York Times Article Search,\n 2.News Feed,\n
         3.Merriam Webster Dictionary and\n 4.Flight Status tracker\n\nClick on one of the buttons to go the desired service.
    </string>
    <string name="reset_toast">All data is Cleared!\n</string>
    <string name="data_loaded_toast">New data has been loaded!\n</string>
    <string name="data_saved_toast">Flight has been saved!\n</string>

    <string name="txt_search">Search</string>
    <string name="txt_reset">Reset</string>
    <string name="ok">OK</string>
    <string name="go_back">Go back?</string>
    <string name="cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="add">Add</string>
    <string name="save">Save</string>

    <!-- Flight tracker Activity -->
    <string name="no_data_found_toast">No Data Found, Check Airport Code\n</string>
    <string name="action_flight_tracker">Flight Tracker</string>
    <string name="flight_search_hint">Enter Airport Code</string>
    <string name="flight_tracker_about">Flight Tracker data provided by \n Aviation-edge.com\n</string>
    <string name="flight_tracker_help">Flight Tracker version <u>1.0</u>
        \nDeveloped by: <b>Lena Kazantseva</b>
        \n\nTo list currnet flights from an airport, enter <i>Airport Code</i> and click <b>Search</b>;
        \n\nExample: for Ottawa enter <b>YOW</b>, Toronto <b>YYZ</b>, Montreal <b>YUL</b>.
        \n\nScroll and select desired Flight.
        \nClick on the <i>Flight</i> to view more details.
        \n\nYou can save flight for future reference, ore remove it from saved list.
        \n\nClick on <b>Reset</b> to clear all flights</string>
    <string name="gps">GPS: </string>
    <string name="speed">speed: </string>
    <string name="altitude">altitude :</string>
    <string name="status">status: </string>


    <!-- New York Times Article Search Activity -->
    <string name="action_nyt">New York Times</string>
    <string name="nyt_about">Data provided by \n New York Times website \n</string>
    <string name="nyt_help">NYT  help ... \n\n change as you need</string>

    <!-- News Feed -->
    <string name="action_news">News Feed</string>
    <string name="news_about">New data provided by \n webhose.io \n</string>
    <string name="news_help">News Feed
    \nDeveloped by: <b>Ruth Anne Sebastian</b>
        \n\nTo list news articles, enter a <i>title</i> and click <b>Search</b>;
        \nScroll and select desired news article title to view the whole article.
        \nAt the bottom of the screen, there are two buttons; <b>Save </b>or <b>Delete</b>
        \nIf the delete button clicked and the article has not been saved, the news item will be removed
        from the view list
        \nSaved list will be shown whenever you come back.
        \nTo remove the list of saved articles, click the <b>reset</b> button on the main page
        </string>
    <string name="saved">Save</string>
    <string name="news_search_hint">Enter News title</string>
    <string name="no_news_found_toast">No Data Found, Check News Title\n</string>
    <string name="Save">Save</string>
    <string name="data_deleted">Data is successfully deleted</string>
    <string name="data_saved">Data is successfully saved</string>
    <string name="no_data_exist">The article has not been saved</string>




    Merriam Webster Dictionary -->
    <string name="action_dictionary">Merriam Webster Dictionary</string>
    <string name="dictionary_about">Data provided by Merriam Webster Dictionary\n www.dictionaryapi.com  \n</string>
    <string name="dictionary_help">Dictinary help ... \n\n change as you need </string>
    <string name="avatar">avatar</string>

</resources>
