<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:id="@+id/fragmentLocation">

    <ImageButton
        android:id="@+id/btnPlane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/flighttracker_logo"
        android:clickable="false"
        android:contentDescription="@string/avatar"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <TextView
        android:id="@+id/flightNum"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text=""
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingStart="5dp"
        android:textSize="45sp"
        android:layout_below="@+id/btnPlane"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:id="@+id/fromTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flightNum"
        android:layout_centerHorizontal="true"
        android:gravity="center">
        <TextView
            android:id="@+id/airportFrom"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text=""
            android:layout_weight=".4"
            android:textSize="35sp"/>

        <TextView
            android:id="@+id/arrow"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".2"
            android:text="  >>>--->>>  "
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/airportTo"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text=""
            android:layout_weight=".4"
            android:textSize="35sp"/>


    </LinearLayout>

    <TextView
        android:id="@+id/location"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/gps"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@+id/fromTo"/>

    <TextView
        android:id="@+id/speed"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/speed"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@+id/location"/>

    <TextView
        android:id="@+id/altitude"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/altitude"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@+id/speed"/>

    <TextView
        android:id="@+id/status"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/status"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="45sp"
        android:layout_below="@+id/altitude"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/Delete"
        android:id="@+id/deleteButton"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        android:id="@+id/saveButton"/>
</RelativeLayout>