<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/refresh"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_above="@id/controlsLayout">

    <ListView
        android:id="@+id/news_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"/>
</android.support.v4.widget.SwipeRefreshLayout>


<LinearLayout
    android:id="@+id/controlsLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="1.0"
    android:layout_alignParentBottom="true"
    android:layout_alignEnd="@+id/refresh">
    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".4"
        android:text="@string/txt_reset"
        android:layout_gravity="start"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/NewsCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight=".2"
        android:hint="@string/news_search_hint"
        android:inputType="textCapCharacters"
        android:autofillHints="@string/txt_search"/>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".4"
        android:text="@string/txt_search"
        android:layout_gravity="end"
        android:textSize="12sp"/>

</LinearLayout>
<ProgressBar
    android:id="@+id/newsProgressBar"
    style="@style/customProgressBar" />
</RelativeLayout>

