<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/fragment">


    <ImageButton
        android:id="@+id/btnNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/news_logo"
        android:clickable="false"
        android:contentDescription="@string/avatar"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnNews"
        android:id="@+id/scroll">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView android:id="@+id/title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text=""
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/linear"/>

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".2"
            android:text="Author:"
            android:layout_below="@+id/title"/>
        <TextView
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Url:"
            android:autoLink="web"
            android:layout_below="@+id/author"
            android:textColor="@color/colorPrimary"/>


<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

            <TextView
                android:id="@+id/article"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:text=""

                />
</ScrollView>
        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Delete" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Save" />

    </LinearLayout>
    </ScrollView>


</RelativeLayout>

